[tool.poetry]
name = "inflammation"
version = "0.1.0"
description = ""
authors = ["Kristian Zarębski <kristian.zarebski@ukaea.uk>"]
readme = "README.md"
packages = [{include = "inflammation"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
